@@ -205,8 +205,8 @@ begin
   StringResult := GetRegistrystringvalue(aktkey, 'ProfileImagePath', noredirect);
   profilepath := StringReplace(StringResult, '%SystemDrive%',
     extractfiledrive(GetWinDirectory));
-  LogDatei.log('found profile reg entry for sid: ' + sid +
-    ' and path: ' + profilepath, LLdebug3);
+  LogDatei.log('found profile reg entry for sid: ' + sid + ' and path: ' +
+    profilepath, LLdebug3);
   Result := profilepath;
 end;
 
@@ -327,9 +327,8 @@ begin
   end
   else
   begin
-    logdatei.log('Could not delete profile for sid : ' + sid +
-      ' - ' + IntToStr(GetLastError) + ' (' + SysErrorMessage(GetLastError) +
-      ')', LLNotice);
+    logdatei.log('Could not delete profile for sid : ' + sid + ' - ' +
+      IntToStr(GetLastError) + ' (' + SysErrorMessage(GetLastError) + ')', LLNotice);
     profilepath := getProfileImagePathfromSid(sid);
     if DirectoryExists(profilepath) then
     begin
@@ -1151,47 +1150,49 @@ function KillProcessbyname(const exename: string; var found: integer): integer;
 var
   pid: dword;
   //user, domain,
-  myuser, mydomain, foundexe, domuser, winstuser, winstdom: ansistring;
+  myuser, mydomain, foundexe, domuser, selfuser, selfdom: ansistring;
   h: HWND;
   proclist: TStringList;
   procdetails: TXStringlist;
   i: integer;
+  selfprocess: string;
 begin
   Result := 0;
   found := 0;
   myuser := '';
   mydomain := '';
-  winstuser := '';
-  winstdom := '';
+  selfuser := '';
+  selfdom := '';
   procdetails := TXStringlist.Create;
-  h := FindWindow('Progman', nil);
+  h := FindWindow('explorer', nil);
   if h <> 0 then
   begin
     if GetWindowThreadProcessId(h, @pid) <> 0 then
     begin
       if not GetProcessUserBypid(pid, myuser, mydomain) then
-        LogDatei.DependentAdd('Could not get user for pid: ' + IntToStr(pid), LLDebug2);
+        LogDatei.log('Could not get user for pid: ' + IntToStr(pid), LLDebug2);
     end
     else
-      LogDatei.DependentAdd('Could not get pid for current session', LLDebug2);
+      LogDatei.log('Could not get pid for current session', LLDebug2);
   end
   else
-    LogDatei.DependentAdd('Could not get handle for current session: no user', LLDebug2);
+    LogDatei.log('Could not get handle for current session: no user', LLDebug2);
   if not (myuser = GetUserNameEx_) then
-    LogDatei.DependentAdd('Strange: different users found: ' + myuser +
-      ' + ' + GetUserNameEx_, LLDebug);
-  LogDatei.DependentAdd('Session owner found: ' + mydomain + '\' + myuser, LLDebug);
-  if getpid4exe('winst32.exe', pid) then
+    LogDatei.log('Strange: different users found: ' + myuser + ' + ' +
+      GetUserNameEx_, LLDebug);
+  LogDatei.log('Session owner found: ' + mydomain + '\' + myuser, LLDebug);
+  selfprocess := ExtractFileName(ParamStr(0));
+  if getpid4exe(selfprocess, pid) then
   begin
-    if GetProcessUserBypid(pid, winstuser, winstdom) then
+    if GetProcessUserBypid(pid, selfuser, selfdom) then
     begin
-      LogDatei.DependentAdd('winst owner found: ' + winstdom + '\' + winstuser, LLDebug);
+      LogDatei.log_prog('opsi-script owner found: ' + selfdom + '\' + selfuser, LLDebug);
     end
     else
-      LogDatei.DependentAdd('Could not get owner for current winst32.exe', LLDebug);
+      LogDatei.log('Could not get owner for current ' + selfprocess, LLDebug);
   end
   else
-    LogDatei.DependentAdd('Could not get pid for current winst32.exe', LLDebug);
+    LogDatei.log('Could not get pid for current ' + selfprocess, LLDebug);
 
   //while getpid4exe(exename,pid) do
   proclist := getWinProcessList;
@@ -1200,9 +1201,9 @@ begin
     procdetails.Clear;
     stringsplit(proclist.Strings[i], ';', procdetails);
     //LogDatei.DependentAdd(proclist.Strings[i],LLDebug);
-    LogDatei.DependentAdd('analyze: exe: ' + procdetails.Strings[0] +
+    LogDatei.log_prog('analyze: exe: ' + procdetails.Strings[0] +
       ' pid: ' + procdetails.Strings[1] + ' from user: ' +
-      procdetails.Strings[2], LLDebug3);
+      procdetails.Strings[2], LLDebug);
     if procdetails.Strings[1] <> '' then
     begin
       try
@@ -1215,17 +1216,17 @@ begin
       if UpperCase(exename) = UpperCase(foundexe) then
       begin
         if (domuser = mydomain + '\' + myuser) or
-          (domuser = winstdom + '\' + winstuser) or (domuser = '') then
+          (domuser = selfdom + '\' + selfuser) or (domuser = '') then
         begin
-          LogDatei.DependentAdd('Will kill exe: ' + foundexe + ' pid: ' +
+          LogDatei.log('Will kill exe: ' + foundexe + ' pid: ' +
             IntToStr(pid) + ' from user: ' + domuser, LLDebug);
           Inc(found);
           if KillProcessbypid(pid) then
             Result := Result + 1;
         end
         else
-          LogDatei.DependentAdd('Will not kill exe: ' + foundexe +
-            ' pid: ' + IntToStr(pid) + ' from user: ' + domuser, LLDebug);
+          LogDatei.log('Will not kill exe: ' + foundexe + ' pid: ' +
+            IntToStr(pid) + ' from user: ' + domuser, LLDebug);
       end;
       //else LogDatei.DependentAdd('No user found for exe: '+exename+' and pid: '+IntToStr(pid),LLDebug);
     end;
@@ -2426,48 +2427,55 @@ end;
 
 // https://stackoverflow.com/questions/49252038/how-to-get-the-full-file-name-from-a-textfile-variable
 
-CONST FILE_NAME_NORMALIZED = $00000000;
+const
+  FILE_NAME_NORMALIZED = $00000000;
 
-FUNCTION GetFinalPathNameByHandleUndefined(hFile : THandle ; lpszFilePath : PChar ; cchFilePath,dwFlags : DWORD) : DWORD; stdcall;
-  BEGIN
-    StrPCopy(lpszFilePath,'');
-    Result:=0
-  END;
+function GetFinalPathNameByHandleUndefined(hFile: THandle;
+  lpszFilePath: PChar; cchFilePath, dwFlags: DWORD): DWORD; stdcall;
+begin
+  StrPCopy(lpszFilePath, '');
+  Result := 0;
+end;
 
-FUNCTION FileHandleToFileName(Handle : THandle) : STRING;
-  TYPE
-    TGetFinalPathNameByHandle   = FUNCTION(hFile : THandle ; lpszFilePath : PChar ; cchFilePath,dwFlags : DWORD) : DWORD; stdcall;
+function FileHandleToFileName(Handle: THandle): string;
+type
+  TGetFinalPathNameByHandle = function(hFile: THandle;
+      lpszFilePath: PChar; cchFilePath, dwFlags: DWORD): DWORD; stdcall;
 
-  CONST
-    GetFinalPathNameByHandle    : TGetFinalPathNameByHandle = NIL;
+const
+  GetFinalPathNameByHandle: TGetFinalPathNameByHandle = nil;
 
-  VAR
-    Err                         : Cardinal;
-    errorstr : string;
-    mylength : cardinal;
+var
+  Err: cardinal;
+  errorstr: string;
+  mylength: cardinal;
 
-  BEGIN
-    result := '';
-    IF NOT Assigned(GetFinalPathNameByHandle) THEN BEGIN
-      GetFinalPathNameByHandle:=GetProcAddress(GetModuleHandle('kernel32'),'GetFinalPathNameByHandleA');
-      IF NOT Assigned(GetFinalPathNameByHandle) THEN GetFinalPathNameByHandle:=GetFinalPathNameByHandleUndefined
-    END;
-    SetLength(Result,MAX_PATH+1);
-    mylength := GetFinalPathNameByHandle(Handle,@Result[1],LENGTH(Result),FILE_NAME_NORMALIZED);
-    if mylength > 0 then
-    begin
-    SetLength(Result,mylength);
-    IF COPY(Result,1,4) = '\\?\' THEN system.Delete(Result,1,4);
-    end
-    else
-    begin
-    errorstr := 'GetFinalPathNameByHandle : ' +
-        IntToStr(GetLastError) + ' (' +
-        SysErrorMessage(GetLastError) + ')';
-    result := '';
-    end;
+begin
+  Result := '';
+  if not Assigned(GetFinalPathNameByHandle) then
+  begin
+    GetFinalPathNameByHandle :=
+      GetProcAddress(GetModuleHandle('kernel32'), 'GetFinalPathNameByHandleA');
+    if not Assigned(GetFinalPathNameByHandle) then
+      GetFinalPathNameByHandle := GetFinalPathNameByHandleUndefined;
+  end;
+  SetLength(Result, MAX_PATH + 1);
+  mylength := GetFinalPathNameByHandle(Handle, @Result[1], LENGTH(
+    Result), FILE_NAME_NORMALIZED);
+  if mylength > 0 then
+  begin
+    SetLength(Result, mylength);
+    if COPY(Result, 1, 4) = '\\?\' then
+      system.Delete(Result, 1, 4);
+  end
+  else
+  begin
+    errorstr := 'GetFinalPathNameByHandle : ' + IntToStr(GetLastError) +
+      ' (' + SysErrorMessage(GetLastError) + ')';
+    Result := '';
+  end;
 
-  END;
+end;
 
 
 // https://stackoverflow.com/questions/49252038/how-to-get-the-full-file-name-from-a-textfile-variable
@@ -2475,30 +2483,31 @@ function resolveWinSymlink(filepath: string; recursive: boolean = True): string;
 var
   //fileinfo: TSearchRec;
   errorinfo: string;
-  myhandle : THandle;
+  myhandle: THandle;
 begin
   Result := filepath;
   filepath := GetForcedPathDelims(filepath);
   if FileExists(filepath, False) then
   begin
-  try
-  myhandle := CreateFile(PChar(filepath), 0, FILE_SHARE_READ, nil, OPEN_EXISTING, FILE_FLAG_BACKUP_SEMANTICS, 0);
-  if Win32Check(myhandle <> INVALID_HANDLE_VALUE) then
-    result := FileHandleToFileName(myhandle)
-  else
-   errorinfo := 'Could not get handle for: '+filepath;
-   except
+    try
+      myhandle := CreateFile(PChar(filepath), 0, FILE_SHARE_READ, nil,
+        OPEN_EXISTING, FILE_FLAG_BACKUP_SEMANTICS, 0);
+      if Win32Check(myhandle <> INVALID_HANDLE_VALUE) then
+        Result := FileHandleToFileName(myhandle)
+      else
+        errorinfo := 'Could not get handle for: ' + filepath;
+    except
       on e: Exception do
       begin
         LogDatei.log_prog('Exception in resolveWinSymlink: ' +
           e.message, LLError);
-         LogDatei.log_prog('Returning input: ' + filepath, LLError);
+        LogDatei.log_prog('Returning input: ' + filepath, LLError);
         Result := filepath;
       end;
     end;
-end
-    else // return filepath also if filepath does not exists
-      Result := filepath;
+  end
+  else // return filepath also if filepath does not exists
+    Result := filepath;
 end;
 
 
